[tool.poetry]
name = "object-cache"
version = "0.1.6"
description = "This module caches the result of function."
authors = ["u-masao <4973920+u-masao@users.noreply.github.com>"]
readme = "README.rst"
repository = "https://github.com/u-masao/object-cache"

[tool.poetry.dependencies]
python = "^3.8"
cloudpickle = "^1.6.0"

[tool.poetry.dev-dependencies]
pytest = "^5.2"

[build-system]
requires = ["poetry>=0.12"]
build-backend = "poetry.masonry.api"
